Safari fixes, improved responsiveness, text overflowing

--- a/src/assets/components/accordion.scss
+++ b/src/assets/components/accordion.scss
@@ -11,6 +11,7 @@
     padding-block: 1.5rem;
     margin-block: 0;
     border-bottom: 2px solid var(--dark-blue);
+    gap: .75rem;
 
     @include respond-to(md) {
       justify-content: space-between;
@@ -32,6 +33,7 @@
     background: var(--light-cyan);
     border-radius: 0.25rem;
     padding: 0.375rem 0.75rem;
+    text-align: start;
 
     &[data-status="true"] {
       background: var(--yellow);
