--- a/src/assets/components/objectives.scss
+++ b/src/assets/components/objectives.scss
@@ -45,10 +45,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 18rem;
+    max-width: 21rem;
     top: 50%;
     transform: translateY(-50%);
     left: 22%;
+    overflow-wrap: anywhere;
 
     @include respond-to(md) {
       max-width: 35rem;
